# hello-directx

./: .gitignore  CMakeLists.txt  GameObject.cpp  GameObject.h  GraphicsEngine.cpp  GraphicsEngine.h  Mesh.cpp  Mesh.h  README.md  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Viewport.cpp  Viewport.h  main.cpp  misc.drawio  types.h  utils.h
src/engine/: AbstractGraphicsEngine.h  DX10GraphicsEngine.h  DX11GraphicsEngine.h  DX9GraphicsEngine.h  GraphicsEngineFactory.h
tests/: CMakeLists.gtest.txt  CMakeLists.txt  main.cpp  some-fake-test.h
